Fixed add icon not centered

--- a/src/components/sidebarComponent/sidebar.less
+++ b/src/components/sidebarComponent/sidebar.less
@@ -1,6 +1,11 @@
 @side-bar-width: 280px;
 @side-bar-transition: 0.2s;
 
+.dcg-add-blank {
+  display: grid;
+  place-items: center;
+}
+
 .dcg-calculator-api-container .dcg-sliding-interior {
   background-color: #fff;
   transition: @side-bar-transition;
